--- a/application/templates/home/home.html
+++ b/application/templates/home/home.html
@@ -7,10 +7,24 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=no">
-    <title>Enjoy Movies</title>
+    <title>Learning English</title>
 
     <link rel="shortcut icon" href="{{ url_for('static',filename='base/image/logo.jpeg') }}">
-    <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap-movie.css') }}">
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static',filename='base/css/bootstrap-art.css') }}">
+    <style>
+            .navbar-brand>img {
+                display: inline;
+            }
+    
+            .media {
+                padding: 3px;
+                border: 1px solid #ccc
+            }
+     </style>
 
 
 </head>
@@ -23,23 +37,24 @@
             <div class="navbar-header">
 
                 <a href="{{ url_for('home.index',page=1) }}" class="navbar-brand" style="width:250px;">
-                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Enjoy Movies
+                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning English
                 </a>
             </div>
 
             <div class="navbar-collapse collapse">
                 <form class="navbar-form navbar-left" role="search" style="margin-top:18px;">
                     <div class="form-group input-group">
-                        <input type="text" class="form-control" placeholder="Search movie" id="key_movie">
+                        <input type="text" class="form-control" placeholder="Search article" id="key_art">
                         <span class="input-group-btn">
-                            <a id="do_search">Search</a>
+                                <a class="btn btn-default" id="do_search">
+                                        <span class="glyphicon glyphicon-search"></span>&nbsp;search</a>
                         </span>
                     </div>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="curlink" href="{{ url_for('home.index',page=1) }}">
-                            <span class="glyphicon glyphicon-film"></span>&nbsp;Movie</a>
+                            <span class="glyphicon glyphicon-film"></span>&nbsp;Article</a>
                     </li>
                     <li>
                         <a class="curlink" href="{{ url_for('home.login') }}">
@@ -79,9 +94,10 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    
     <script>
         $("#do_search").click(function () {
-            var key = $("#key_movie").val();
+            var key = $("#key_art").val();
             location.href = "{{ url_for('home.search',page=1) }}?key=" + key;
         });
 
