--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -4,13 +4,13 @@
 
 
 
-<section id="movielist">
+<section style="margin-top: 150px">
     <div class="container">
         <div class="row wow fadeIn" data-wow-delay="0.6s">
             <div class="col-md-12 table-responsive">
-                <table class="table text-left table-bordered" id="movietags">
+                <table class="table text-left table-bordered" id="arttags">
                     <tr>
-                        <td style="width:10%;">Movie tag</td>
+                        <td style="width:10%;">Article tag</td>
                         <td style="width:90%;">
                             {% for v in tags %}
                             <a href="{{ url_for('home.index',page=1) }}?tid={{ v.id }}&pm={{ p['pm'] }}&cm={{ p['cm'] }}" class="label label-info">
@@ -47,16 +47,16 @@
             </div>
             {% for v in page_data.items %}
             <div class="col-md-3">
-                <div class="movielist text-center">
+                <div class="artlist text-center">
                     <!--<img data-original="holder.js/262x166"
                              class="img-responsive lazy center-block" alt="">-->
                     
                     <div class="text-left" style="margin-left:auto;margin-right:auto;width:110px;">
-                        <span style="color:black">{{ v.title }}</span>
+                        <h3>{{ v.title }}</h3>
                         
                     </div>
-                    <a href="{{ url_for('home.play',id=v.id,page=1) }}" class="btn btn-primary" target="_blank" role="button">
-                        <span class="glyphicon glyphicon-play"></span>&nbsp;Play</a>
+                    <a href="{{ url_for('home.read',id=v.id,page=1) }}" class="btn btn-primary" target="_blank" role="button">
+                        &nbsp;Read</a>
                 </div>
             </div>
             {% endfor %}
