--- a/application/templates/admin/tag_list.html
+++ b/application/templates/admin/tag_list.html
@@ -1,8 +1,6 @@
-{% extends "admin/admin.html" %} 
-{% import "ui/admin_page.html" as pg %}
-{% block content %}
+{% extends "admin/admin.html" %} {% import "ui/admin_page.html" as pg %} {% block content %}
 <section class="content-header">
-    
+
 </section>
 <section class="content" id="showcontent">
     <div class="row">
@@ -10,35 +8,28 @@
             <div class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title">Tag list</h3>
-                    <div class="box-tools">
-                        <div class="input-group input-group-sm" style="width: 150px;">
-                            <input type="text" name="table_search" class="form-control pull-right" placeholder="Search...">
 
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="box-body table-responsive no-padding">
-                        {% for msg in get_flashed_messages(category_filter=["ok"]) %}
-                        <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
-                        {% endfor %}
-                        
+                    {% for msg in get_flashed_messages(category_filter=["ok"]) %}
+                    <p class="tag_add-box-msg" style="color:green">{{ msg }}</p>
+                    {% endfor %} {% for msg in get_flashed_messages(category_filter=["err"]) %}
+                    <p class="tag_add-box-msg" style="color:red">{{ msg }}</p>
+                    {% endfor %}
+
                     <table class="table table-hover">
                         <tbody>
                             <tr>
                                 <th>id</th>
                                 <th>name</th>
-                                
+                                <th>addtime</th>
                             </tr>
                             {% for v in page_data.items %}
                             <tr>
                                 <td>{{ v.id }}</td>
-                                <td>{{ v.name }}</td>                           
-                                <td>{{ v.release_time }}</td>
+                                <td>{{ v.name }}</td>
+                                <td>{{ v.addtime }}</td>
+
                                 <td>
                                     <a href="{{ url_for('admin.tag_edit',id=v.id) }}" class="label label-success">Edit</a>
                                     &nbsp;
