--- a/application/templates/admin/user_list.html
+++ b/application/templates/admin/user_list.html
@@ -9,17 +9,7 @@
             <div class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title">User list</h3>
-                    <div class="box-tools">
-                        <div class="input-group input-group-sm" style="width: 150px;">
-                            <input type="text" name="table_search" class="form-control pull-right" placeholder="Search...">
-
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="box-body table-responsive no-padding">
                         {% for msg in get_flashed_messages(category_filter=["ok"]) %}
@@ -30,26 +20,18 @@
                             <tr>
                                 <th>id</th>
                                 <th>Username</th>
-                                
-                                <th>Status</th>
-                                <th>Login time</th>
+                                <th>Register time</th>
                                 <th>Operation</th>
                             </tr>
                             {% for v in page_data.items %}
                             <tr>
                                 <td>{{ v.id }}</td>
                                 <td>{{ v.name }}</td>
-                                
-                                
-                                <td>Normal/Froozen</td>
                                 <td>{{ v.addtime }}</td>
                                 <td>
                                     <a class="label label-success" href="{{ url_for('admin.user_view',id=v.id) }}">Check</a>
                                     &nbsp;
-                                    <a class="label label-info">Thaw</a>
-                                    &nbsp;
-                                    <a class="label label-warning">Freeze</a>
-                                    &nbsp;
+                                    
                                     <a class="label label-danger" href="{{ url_for('admin.user_del',id=v.id) }}">Delete</a>
                                 </td>
                             </tr>
