--- a/application/templates/home/menu.html
+++ b/application/templates/home/menu.html
@@ -1,4 +1,4 @@
-<div class="col-md-3">
+<div class="col-md-3" style="margin-top: 90px">
     <div class="list-group">
         <a href="{{ url_for('home.user') }}" class="list-group-item">
             <span class="glyphicon glyphicon-user"></span>&nbsp;User center
@@ -9,6 +9,10 @@
         <a href="{{ url_for('home.comments',page=1) }}" class="list-group-item">
             <span class="glyphicon glyphicon-comment"></span>&nbsp;Comments history
         </a>
+        <a href="{{ url_for('home.artcol',page=1) }}" class="list-group-item">
+                <span class="glyphicon glyphicon-comment"></span>&nbsp;Liked
+        </a>
+        
 
     </div>
 </div>
