--- a/application/templates/home/user.html
+++ b/application/templates/home/user.html
@@ -1,5 +1,5 @@
 {% extends "home/home.html" %} {% block content %} {% include "home/menu.html" %}
-<div class="col-md-9">
+<div class="col-md-9" style="margin-top: 90px"> 
     <div class="panel panel-warning">
         <div class="panel-heading">
             <h3 class="panel-title">
