--- a/application/templates/home/home.html
+++ b/application/templates/home/home.html
@@ -37,7 +37,7 @@
             <div class="navbar-header">
 
                 <a href="{{ url_for('home.index',page=1) }}" class="navbar-brand" style="width:250px;">
-                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning English
+                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning Programming
                 </a>
             </div>
 
