--- a/application/templates/home/layout.html
+++ b/application/templates/home/layout.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="{{ url_for('home.index',page=1) }}" class="navbar-brand" style="width:250px;">
-                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning English
+                    <img src="{{ url_for('static',filename='base/image/logo.jpeg') }}" style="height:30px;">&nbsp;Learning Programming
                 </a>
             </div>
 
