--- a/application/templates/admin/oplog_list.html
+++ b/application/templates/admin/oplog_list.html
@@ -17,7 +17,7 @@
                         <tbody>
                             <tr>
                                 <th>id</th>
-                                <th>Adinistrator</th>
+                                <th>Administrator</th>
                                 <th>Operation time</th>
                                 <th>Reason</th>
                                 
