show which article the comment is related to

--- a/application/templates/home/comments.html
+++ b/application/templates/home/comments.html
@@ -15,7 +15,7 @@
                         <header class="comment-header">
                             <div class="comment-meta">
                                 <p class="comment-author">{{ v.account.name }}</p>
-                                commented:
+                                commented about {{ v.art.title }}
                             </div>
                         </header>
                         <div class="comment-body">
