--- a/application/templates/home/index.html
+++ b/application/templates/home/index.html
@@ -20,7 +20,7 @@
                     
                     
                     <tr>
-                        <td>Played</td>
+                        <td>Read</td>
                         <td>
                             <a href="{{ url_for('home.index',page=1) }}?tid={{ p['tid'] }}&pm=1&cm={{ p['cm'] }}" class="label label-success">
                                 <span class="glyphicon glyphicon-arrow-down"></span>&nbsp;Most first</span>
