--- a/application/templates/admin/grid.html
+++ b/application/templates/admin/grid.html
@@ -28,7 +28,7 @@
         <ul class="treeview-menu">
             <li>
                 <a href="{{ url_for('admin.art_add') }}">
-                    <i class="fa fa-circle-o"></i> Add article
+                    <i class="fa fa-circle-o"></i> Add articles
                 </a>
             </li>
             <li>
