painikkeet login ja register piilotuvat sisään kirjautuneille

--- a/application/templates/home/layout.html
+++ b/application/templates/home/layout.html
@@ -49,6 +49,7 @@
                         <a class="curlink" href="{{ url_for('home.index',page=1) }}">
                             <span class="glyphicon glyphicon-film"></span>&nbsp;Articles</a>
                     </li>
+                    {% if "user" not in session %}
                     <li>
                         <a class="curlink" href="{{ url_for('home.login') }}">
                             <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
@@ -57,6 +58,8 @@
                         <a class="curlink" href="{{ url_for('home.regist') }}">
                             <span class="glyphicon glyphicon-plus"></span>&nbsp;Register</a>
                     </li>
+                    {% endif %}
+                    {% if "user" in session %}
                     <li>
                         <a class="curlink" href="{{ url_for('home.login') }}">
                             <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a>
@@ -65,6 +68,7 @@
                         <a class="curlink" href="{{ url_for('home.user') }}">
                             <span class="glyphicon glyphicon-user"></span>&nbsp;User center</a>
                     </li>
+                    {% endif %}
                    
                 </ul>
             </div>
