--- a/application/templates/home/layout.html
+++ b/application/templates/home/layout.html
@@ -61,7 +61,7 @@
                     {% endif %}
                     {% if "user" in session %}
                     <li>
-                        <a class="curlink" href="{{ url_for('home.login') }}">
+                        <a class="curlink" href="{{ url_for('home.logout') }}">
                             <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a>
                     </li>
                     <li>
