--- a/application/templates/home/home.html
+++ b/application/templates/home/home.html
@@ -56,7 +56,7 @@
                         <a class="curlink" href="{{ url_for('home.index',page=1) }}">
                             <span class="glyphicon glyphicon-film"></span>&nbsp;Article</a>
                     </li>
-                    {% if "user" not in session%}
+                    {% if "user" not in session %}
                     <li>
                         <a class="curlink" href="{{ url_for('home.login') }}">
                             <span class="glyphicon glyphicon-log-in"></span>&nbsp;Login</a>
@@ -66,9 +66,9 @@
                             <span class="glyphicon glyphicon-plus"></span>&nbsp;Register</a>
                     </li>
                     {% endif %}
-                    {% if "user" in session%}
+                    {% if "user" in session %}
                     <li>
-                        <a class="curlink" href="{{ url_for('home.login') }}">
+                        <a class="curlink" href="{{ url_for('home.logout') }}">
                             <span class="glyphicon glyphicon-log-out"></span>&nbsp;Logout</a>
                     </li>
                     <li>
